# Geofluids_Project

./: .gitignore  MainPython.ipynb  README.md  bt_dict_output.csv  function4ReactiveTransport.py  pyproject.toml
